[package]
name = "dh_icalnigma"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
chrono-tz = "0.5.3"
encoding_rs = "0.8.28"
encoding_rs_io = "0.1.7"
html5ever = "0.25.1"
markup5ever_rcdom = "0.1.0"
lazy_static = "1.4.0"
regex = "1.5.4"
