[package]
name = "dh_icalnigma"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono-tz = "0.5.3"
encoding_rs = "0.8.28"
encoding_rs_io = "0.1.7"
html5ever = "0.25.1"
markup5ever_rcdom = "0.1.0"
lazy_static = "1.4.0"
regex = "1.5.4"
serde_json = "1.0"

[dependencies.clap]
version = "~3.0.0-beta"
features = ["derive"]

[dependencies.chrono]
version = "0.4.19"
features = ["serde"]

[dependencies.serde]
version = "1.0"
features = ["derive"]
